--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 	<distributionManagement>
         <repository>
          <id>releases</id>
-             <url>http://54.177.77.85:8081/#admin/repository/repositories/releases</url>
+             <url>http://54.177.77.85:8081/repository/maven-releases/</url>
         </repository>
     	</distributionManagement>
 </project>
