--- a/pom.xml
+++ b/pom.xml
@@ -154,7 +154,7 @@
 	<distributionManagement>
         <repository>
          <id>releases</id>
-             <url>http://18.144.156.186:8081/#browse/browse:maven-releases/</url>
+             <url>http://http://18.144.156.186:8081//</url>
         </repository>
     	</distributionManagement>
 </project>
