--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.websystique.springmvc</groupId>
 	<artifactId>SpringHibernateExample</artifactId>
 	<packaging>war</packaging>
-	<version>2.4.5</version>
+	<version>2.4.6</version>
 	<name>SpringHibernateExample</name>
 
 	<properties>
@@ -154,7 +154,7 @@
 	<distributionManagement>
         <repository>
          <id>releases</id>
-             <url>http://http://18.144.156.186:8081//</url>
+             <url>http://18.144.156.186:8081/#browse/browse:maven-releases//</url>
         </repository>
     	</distributionManagement>
 </project>
