--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.websystique.springmvc</groupId>
 	<artifactId>SpringHibernateExample</artifactId>
 	<packaging>war</packaging>
-	<version>2.4.20</version>
+	<version>2.4.20-SNAPSHOT</version>
 	<name>SpringHibernateExample</name>
 
 	<properties>
@@ -154,7 +154,7 @@
 	<distributionManagement>
         <repository>
          <id>releases</id>
-             <url>http://54.193.248.112:8081/repository/maven-releases/</url>
+             <url>http://54.193.248.112:8081/repository/maven-snapshots/</url>
         </repository>
     	</distributionManagement>
 </project>
