--- a/pom.xml
+++ b/pom.xml
@@ -153,7 +153,7 @@
 	</build>
 	<distributionManagement>
         <repository>
-         <id>releases</id>
+         <id>SNAPSHOT</id>
              <url>http://54.193.248.112:8081/repository/maven-snapshots/</url>
         </repository>
     	</distributionManagement>
